--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lawrence Thomas Web Developer Portfolio"
+      content="Lawrence Thomas Web Developer Portfolio based out of New York"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
