Added Wordpress Logo

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lawrence Thomas Web Developer Portfolio based out of New York"
+      content="Lawrence Thomas is a Web Developer based out of New York. Specializing in JavaScript!"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
