--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       href="https://fonts.googleapis.com/css?family=Archivo+Black|Judson:400,700"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans|Roboto&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
